# rocket-blog-rust

./: Cargo.toml  package-lock.json  readme.md
assets/css/: rocket.css
database/: posts.json  users.json
src/: main.rs
src/blog/: mod.rs  model.rs  post_model.rs
src/database/: database_model.rs  mod.rs  model.rs
src/user/: mod.rs  model.rs  user_model.rs
templates/: base.html.tera  footer.html.tera  nav.html.tera  toast.html.tera
templates/error/: 404.tera
templates/posts/: create.tera  edit.tera  index.tera  read.tera
templates/user/: login.tera  profile.tera  settings.tera
