[package]
name = "blog-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.4.11"}
rocket_contrib = { version = "0.4.11",  features = ["tera_templates"] }
tera = "1.16.0"
rand = "0.8.5"
serde = {version = "1.0.139", features = ["derive"]}
serde_json = "1.0.82"
sha2 = "0.10.2"
hex = "0.4.3"